objects/ssot__CodeSetBundle__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CodeSet10Id__c</fullName>
        <label>Code Set 10</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeSet11Id__c</fullName>
        <label>Code Set 11</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeSet12Id__c</fullName>
        <label>Code Set 12</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeSetBundleKeyText__c</fullName>
        <label>Code Set Bundle Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CodeSetBundleType__c</fullName>
        <label>Code Set Bundle Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Code Set Bundle Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716576872131_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CodeSetBundle_CodeSet3Id_map_CodeSet_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>CodeSetBundle_CodeSet3Id_map_CodeSet_rel</relationshipLabel>
        <relationshipName>rel_1716576872131_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716576873244_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CodeSetBundle_CodeSet15Id_map_CodeSe_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>CodeSetBundle_CodeSet15Id_map_CodeSe_rel</relationshipLabel>
        <relationshipName>rel_1716576873244_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716576874287_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CodeSetBundle_CodeSet10Id_map_CodeSe_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>CodeSetBundle_CodeSet10Id_map_CodeSe_rel</relationshipLabel>
        <relationshipName>rel_1716576874287_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>